# scrapeX

./: .gitIgnore  .slugignore  5am.json  5am.py  Cargo.toml  Dockerfile  Procfile  README.md  application.go  build.sh  go.mod  go.sum  main.go  main.py  requirements.txt  scrapeTest.py  server.go  stockTrend.py  test.py  whenToUse.go
.github/workflows/: azure-container-webapp.yml
5am/: binance-day.json  binance-month.json  binance-week.json  coinbase-day.json  coinbase-month.json  coinbase-week.json  coinbase-year.json  webull-day.json  webull-month.json  webull-week.json  webull-year.json
5am/res/: risky-crypto.json  safe-crypto.json  stable-crypto.json  stocks.json  unstable-crypto.json
apiJson/: binance-day.json  binance-month.json  binance-week.json  coinbase-day.json  coinbase-month.json  coinbase-week.json  coinbase-year.json  webull-day.json  webull-month.json  webull-week.json  webull-year.json
archive/: go.mod  main.go
archive/utils/: apiParsers.go
env/Scripts/: activate  activate.bat
rest-go/: main.go
scrapperBee/: scrapingbee.py
src/: main.rs  response.rs  routes.rs  utils.rs
utils/: apiParsers.go  init.go  makeRequests.py  parseJson.py  userAgentsArray.py
