[package]
name = "scrape"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
bytes = "1.3.0"
futures = "0.3.25"
json = "0.12.4"
reqwest = { version = "0.11.13", features = ["blocking"] }
scraper = "0.14.0"
select = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
